New images and text

--- a/bib1.bib
+++ b/bib1.bib
@@ -489,8 +489,38 @@
 	year = "1979"
 }
 
+@article{lattimer2001,
+
+	author = "Lattimer, James M. and Prakash, Maddapa",
+	journal = "Astrophys.J., 550, 426-442",
+	title = "{NEUTRON STAR STRUCTURE AND THE EQUATION OF STATE}",
+	year = "2001"
+}
+
+@article{link1999,
+
+	author = "Link, B. and Epstein, R. I. and Lattimer, J. M.",
+	journal = "Phys.Rev.Lett., 83, 17, 3362-3365",
+	title = "{Pulsar Constraints on Neutron Star Structure and Equation of State}",
+	year = "1999"
+}
 
 
+@article{demorest,
 
+	author = "Demorest, P. and Pennucci, T. and Ransom, S. and Roberts, M. and Hessels, J. W. T.",
+	journal = "Nature, 467, 7319, 1081-1083",
+	title = "{Shapiro delay measurement of a 2 solar mass neutron star}",
+	year = "2010"
+}
+
+
+@article{outburst,
+
+	author = "Sanna, A. and Burderi, L. and Riggio, A. and Pintore, F. and Di Salvo, T. and Gambino, A. F. and Iaria, R. and Matranga, M. and Scarano, F.",
+	journal = "MNRAS, 459, 2, 1340-1349",
+	title = "{Timing of the accreting millisecond pulsar SAX J1748.9−2021 during its 2015 outburst}",
+	year = "2016"
+}
 
 
